# MagentaDB

./: Cargo.toml  LICENSE  MagentaDB README.md  cmd.rs  comprehensive_test.sh  github_release_workflow.txt  github_setup_guide.md  release_script.sh  test_script.sh
crates/: magentadb.json
crates/magentadb-cli/: Cargo.toml
crates/magentadb-cli/src/: main.rs
crates/magentadb-core/: Cargo.toml
crates/magentadb-core/src/: db.rs  document.rs  lib.rs
crates/magentadb-crypto/: Cargo.toml
crates/magentadb-crypto/src/: encrypt.rs  lib.rs  token.rs
