[package]
name = "magentadb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
magentadb-core = { path = "../magentadb-core" }
magentadb-crypto = { path = "../magentadb-crypto" }
